--- a/src/assets/style/AppHeader.css
+++ b/src/assets/style/AppHeader.css
@@ -22,12 +22,29 @@
     letter-spacing: 0.25vw;
     word-spacing: 1.1vw;
 
-    background: linear-gradient(
+  
+  }
+  @media only screen  and (max-device-width: 1100px)
+ {
+    .title {
+      background: linear-gradient(
+        to left, 
+        rgb(2, 23, 46), 
+        rgb(5, 69, 152)
+      );
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+ }
+@media only screen  and (min-device-width: 1100px)
+ {   .title {
+  background: linear-gradient(
     to right, 
     rgb(1, 29, 59), 
-    rgb(255, 255, 255)
+    rgb(144, 180, 235)
   );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  }
+}
+}
   
