--- a/src/assets/style/CitizenHomePage.css
+++ b/src/assets/style/CitizenHomePage.css
@@ -23,13 +23,19 @@
         max-width: 200px;
         position: absolute;
         right: 50px;
-        top: 190px;
+        top: 23vh;
         font-size: 21px;
     }
     .MuiAvatar-root{
         height: 55px !important;
         width: 55px !important;
         font-size: 30px !important;
+    }
+    .info-container p {
+        margin-top: 0px;
+    }
+    .report-container {
+        width: 38%;
     }
 }
 @media only screen  and (max-device-width: 1100px)
@@ -73,7 +79,9 @@
         font-size: 25px !important;
         margin-right: 20px !important;
     }
-
+    .report-container {
+        width: 90%;
+    }
 }
 
   .leaflet-container {
@@ -95,4 +103,8 @@
 .MuiTabPanel-root{
    display: flex;
    justify-content: center;
+}
+.mapArea {
+    margin-bottom: 50px;
+    height: 50vh;
 }
