--- a/src/assets/style/CitizenHomePage.css
+++ b/src/assets/style/CitizenHomePage.css
@@ -37,6 +37,21 @@
     .report-container {
         width: 38%;
     }
+    .left-span{
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+      .right-span{
+          text-align: right;
+      }
+      
+      .header-span {
+          width: calc( 100% / 4 );
+          display:inline-block
+      }
+      .report-history-container{
+        width: 88vw;
+    }
 }
 @media only screen  and (max-device-width: 1100px)
  {  
@@ -64,6 +79,7 @@
       .MuiPaper-root {
         text-align: center;
         
+        
     }
     .info-container {
         margin-top: 10px;
@@ -82,6 +98,15 @@
     .report-container {
         width: 90%;
     }
+    #tab-menu{
+        margin-bottom: 10vh;
+    }
+    .reportHeader{
+        flex-direction: column;
+    }
+    .report-history-container{
+        width: 95vw;
+    }
 }
 
   .leaflet-container {
@@ -99,12 +124,38 @@
     bottom: 0;
     z-index: 1000;
 }
-
+.wrapper{
+    display: flex;
+    flex-direction: column;
+}
 .MuiTabPanel-root{
    display: flex;
+ 
    justify-content: center;
+   padding: 10px !important;
 }
 .mapArea {
     margin-bottom: 50px;
-    height: 50vh;
+    height: 70vh;
+}
+.reportInfo{
+    overflow:hidden;
+    background-color: #f7f7f7;
+    width: 100%;
+    font-size: 12px;
+}
+
+.reportHeader{
+    display: flex;
+    width: 100%;
+}
+.filter-sort-div{
+    margin-bottom: 20px;
+}
+.filter-sort-select{
+    margin-right: 15px;
+    margin-bottom: 5px;
+}
+.ant-select{
+    min-width: 220px;
 }
