--- a/src/assets/style/CitizenSignUp.css
+++ b/src/assets/style/CitizenSignUp.css
@@ -1,36 +1,26 @@
-@media only screen  and (max-device-width: 1100px)
+@media only screen  and (max-device-width: 600px)
  {
     #signup-page {
         background-image: url("../images/phone.jpg");
     }
     #form-container {
         background-color: rgba(255, 252, 252, 0.19);
-        width: 88vmin;
     }
  }
-@media only screen  and (min-device-width: 1100px)
+@media only screen  and (min-device-width: 600px)
  {   #signup-page{
     background-image: url("../images/6.jpg");
     }
     #form-container{
         background-color: rgba(162, 158, 158, 0.09);
-        width: 30vw;
     }
-    label {
-        font-size: 18px !important;
-    }
-    input{
-        font-size: 18px !important;
-    }
-    #submit-btn{
-        font-size: 18px !important;
-        line-height: 18px;
-    }
-    
+
+
 }
-/* #register_password_help div{
-    color: aquamarine;
-} */
 .ant-form-item {
     margin-bottom: 29px;
+}
+#form-container{
+    width: 85%;
+    max-width: 375px;
 }
