--- a/src/assets/style/ManagerHomePage.css
+++ b/src/assets/style/ManagerHomePage.css
@@ -43,7 +43,7 @@
 .key{
     font-size: 1.2vmax;
     color: rgb(162, 166, 170);
-    margin-left: 30px
+    margin-left: 22px
 }
 .details{
     font-size: 1.5vmax;
@@ -56,4 +56,7 @@
 }
 .bad{
     color: red
+}
+.type-pie{
+    height: 300px;
 }
